test/expected/declare_fmo_star_rk_rk.out
declare * as friend member operator (reference to S) returning reference to S
        ^
9: error: operator overloading not supported in C
